--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
 body {
     background: #EDBB99;
 }
@@ -14,7 +15,37 @@ main {
     align-items: center;
     margin: auto;
 }
+/* NavBar styling */
+.time {
+    float: right;
+}
 
+.score {
+    float: left;
+}
+
+#nav {
+    display: block;
+    background-color: #FDEDEC;
+    display: inline-block;
+    width: 95vw;
+    border: 3px solid #FFA07A;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.highscoreLink {
+    text-decoration: none;
+    color: black;
+}
+.highscoreLink:hover {
+    text-decoration: underline;
+    color: #FFA07A;
+}
+
+/* main content*/
 #container {
     width: 700px;
     background-color: #F3E9D4;
@@ -43,7 +74,7 @@ button {
 
 button:hover {
     transition-duration: 0.4s;
-    background-color: #DC7633;
+    background-color: #FFA07A;
 }
 
 h1 {
@@ -52,5 +83,5 @@ h1 {
 }
 
 h3 {
-    font-weight: 75;
+    font-weight: 80;
 }
